tests/parser-test-files/bad-files/parse-attribute.3.error
error: Invalid type variable
  --> test:4:6
   |
 4 |  (repr (:enum))
   |        ^^^^^^^ expected keyword symbol
